# InformationRetrieval

./: CMakeLists.txt  README.md
data/: 1.1.txt  1.2.txt  1.3.txt
include/: chapter1.h
src/: CMakeLists.txt  chapter1.cpp  main.cpp
